--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hurley's Personal Website</title>
     </head>
     <body>
-        <img src="images/EricHurley.jpg" alt="Portrait photograph of Eric Hurley wearing a suit and tie" width="200" height="200">
+        <img src="Images/EricHurley.jpg" alt="Portrait photograph of Eric Hurley wearing a suit and tie" width="200" height="200">
         <h1>Eric Hurley</h1>
         <p><em>Co-Founder <strong><a href="https://hurleyandyomo.com/">H&Y NFTs</a></strong></em></p>
         <p>H&Y NFTs is an Algorand ($ALGO) NFT project that brings back retro arcade games and uses them to enable gamified raffles</p>
